public/global.css
/*
--- 01 TYPOGRAPHY SYSTEM

- Font sizes (px)
10 / 12 / 14 / 16 / 18 / 20 / 24 / 30 / 36 / 44 / 52 / 62 / 74 / 86 / 98

- Font weights
Default: 400
Medium: 500
Semi-bold: 600
Bold: 700

- Line heights
Default: 1
Small: 1.05
Medium: 1.2
Paragraph default: 1.6
Large: 1.8

- Letter spacing
-0.5px
0.75px

--- 02 COLORS

- Primary: #e67e22
- Tints:
#fdf2e9
#fae5d3
#eb984e

- Shades: 
#cf711f
#45260a

- Accents:
- Greys

#888
#767676 (lightest grey allowed on #fff)
#6f6f6f (lightest grey allowed on #fdf2e9)
#555
#333

--- 05 SHADOWS

0 2.4rem 4.8rem rgba(0, 0, 0, 0.075);

--- 06 BORDER-RADIUS

Default: 9px
Medium: 11px

--- 07 WHITESPACE

- Spacing system (px)
2 / 4 / 8 / 12 / 16 / 24 / 32 / 48 / 64 / 80 / 96 / 128
*/

:root {
  --color-white: rgb(248, 248, 248);
  --color-primary: #0d365b;
  --color-primary-light: #74c0fc;
  --color-pink: #f06595;
  --color-yellow: #ffe066;
  --color-green: #40c057;
  --color-red: #fa5252;
  --ion-color-secondary: #1864ab;
  --color-secondary: #eb984e;
  --color-secondary-dark: #cf711f;
}

* {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
}

html {
  /* 10px / 16px = 0.625 = 62.5% */
  /* Percentage of user's browser font-size setting */
  font-size: 62.5%;
  overflow-x: hidden;
  height: 100%;
}

body {
  font-family: 'Inconsolata', monospace;
  line-height: 1;
  font-weight: 400;
  color: #555;
  letter-spacing: -1px;
  background-color: var(--color-white);
  overflow: auto;
  height: 100%;
}

